
CHANGES IN HTMLDOC v1.8.12

    NEW FEATURES

	- Added new "--batch" option to convert HTMLDOC book
	  files from the command-line.
	- Added support for the "-display" option on systems
	  that use X11.
	- Now use image objects in PDF output for images when
	  the image width * height >= 1024.
	- Now use JPEG compression when the number of colors
	  would be > 32 colors or 16 gray shades.
	- Transparency support for GIF files!

    CHANGES

	- Consolidated temporary file management into new
	  file_temp() function.  The new function also makes use
	  of the Windows "short lived" open option which may
	  improve performance with small temporary files.
	- Updated book file format and added an appendix
	  describing the format.

    BUG FIXES

	- The web page output was not divided into chapters for
	  each input file.
	- The "make install" target did a clean.
	- The configure script would remove the image libraries
	  if you did not have FLTK installed.
	- The fix_filename() function didn't handle relative
	  URLs for images (e.g. SRC="../images/filename.gif")


CHANGES IN HTMLDOC v1.8.11

    NEW FEATURES

	- Added koi8-r character set.
	- Added new "TrueType" font option for PDF output. This
	  (hopefully) should improve support for non-latin
	  languages.
	- Added support for "justify" alignment; this is
	  currently implemented by adding additional space
	  between characters (no automatic hyphenation...)

    CHANGES

	- The "make install" target does a "make all" to ensure
	  that the software is built before installing it.  This
	  should help users that don't read the documentation
	  build the software.
	- Incorporated several OS/2 compile fixes from Alexander
	  Mai.
	- Tables that exceed the printable width of the page are
	  now squeezed to fit.

    BUG FIXES

	- The temporary file created for PDF output to stdout
	  was not unique.
	- The temporary file created for PDF output to stdout
	  did not use the GetTempPath() function under Windows.