@@ -13,7 +13,8 @@ CHANGES IN HTMLDOC v1.8.12
 	  the image width * height >= 1024.
 	- Now use JPEG compression when the number of colors
 	  would be > 32 colors or 16 gray shades.
-	- Transparency support for GIF files!
+	- True transparency support for GIF files and PDF 1.3 and
+	  PostScript Level 2 or 3 output!
 
     CHANGES
 
@@ -23,6 +24,7 @@ CHANGES IN HTMLDOC v1.8.12
 	  improve performance with small temporary files.
 	- Updated book file format and added an appendix
 	  describing the format.
+	- Now default to PDF 1.3 (Acrobat 4.0) output format.
 
     BUG FIXES
 
